# GarblingGates

./: CMakeLists.txt  HashFunctions.cpp  HashFunctions.h  README.md  atecaGarbeling.cpp  atecaGarbeling.h  bloodcompatibility.cpp  bloodcompatibility.h  garblingScheme.cpp  garblingScheme.h  main.cpp
schemes/: atecaFreeXOR.cpp  atecaFreeXOR.h  atecaGarble.cpp  atecaGarble.h  baseGarble.cpp  baseGarble.h  threeHalves.cpp  threeHalves.h
schemes/toyExample/: toyGarblingScheme.cpp  toyGarblingScheme.h
tests/: circuitParserTest.cpp  test_ateca.cpp  test_atecaFreeXOR.cpp  test_baseline.cpp  test_baselineRO.cpp  test_class.cpp  test_hashTCCR.cpp  test_threeHalves.cpp  test_threeHalvesFast.cpp  test_threeHalvesRO.cpp  test_torture.cpp  test_toyExample.cpp  test_util.cpp
tests/circuits/: BloodComp.txt  andIntoXor.txt  andTest.txt  andXor4input.txt  invTest.txt  smalltest  xnorIntoAnd.txt  xorAnd4input.txt  xorIntoAnd.txt
util/: circuitParser.cpp  circuitParser.h  hashRTCCR.h  hashTCCR.h  timing.h  util.cpp  util.h
util/otUtil/: OT.cpp  OT.h  elgamal.cpp  elgamal.h  otUtil.cpp  otUtil.h  util.cpp  util.h
